fix(android): 六处编译得过、在真机上必崩的 API 调用
用一台 Pixel 3 XL（Android 12，API 31）装包时确认的：这些调用对着 API 35 编译没有问题，装到 minSdk 28 声明所覆盖的设备上会抛 `NoSuchMethodError`。lint 一直在报，错误数从 15 降到 7。

- `KeyboardScheme#enabledFromPreferenceIds`（`Stream#toList`，API 34）——键盘一读到带 `touch_keyboard_schemes` 的偏好就会走到，是其中最要命的一处。
- `HandwritingInk#snapshot`（同上）——手写每一笔。
- `DictionarySnapshotQueue`（`HexFormat`，API 34）——个人词库同步的校验。
- `MSIMEInputService` 与 `AccountPlugin.kt`（`Path.of`，API 34）——皮肤面板读自定义皮肤库。
- `VoiceResultStore`（`InputStream#readNBytes`，API 33）——语音结果交接。
- `AiPolishModelCatalog`（`URLEncoder#encode(String, Charset)`，API 33）——AI 模型列表。

替换的都是语义等价物：`readFully` 与 `readNBytes` 同样是全有或全无，`Paths.get` 与 `Path.of` 解析一致，其余是循环和手写十六进制。没有启用 core library desugaring——那只能救其中两处，另外四处它也无能为力。

剩下 7 条 lint 错误都不是运行期问题：3 条 MissingClass 是 lint 解析不了这个扁平包布局（类确实存在，APK 装得上也跑得起来），4 条 AppCompatCustomView 指向输入法自己的按键控件，那里没有 AppCompat 主题，继承 AppCompatButton 并不正确。